--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "styled-components": "^6.1.13"
+    "react-paginate": "^8.2.0",
+    "react-toastify": "^10.0.5",
+    "styled-components": "^6.1.13",
+    "sweetalert2": "^11.14.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
